--- a/code/Dictionnaire/pom.xml
+++ b/code/Dictionnaire/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.4.0</version>
         </dependency>
+        <dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+    		<version>2.28.2</version>
+		</dependency>
     </dependencies>
 </project>
